package com.fomov.tasktroveapi.dto;

import lombok.Data;

@Data
public class RoleDto {
    
    private Integer id;
    private String name;
    private String description;
}
