package com.fomov.tasktroveapi.model;

public enum ReviewerType {
    CUSTOMER,   // Отзыв оставлен заказчиком
    PERFORMER   // Отзыв оставлен исполнителем
}

